# memoglobe

./: .gitignore  MEMOGLOBE_DIRECTIVE.md  MEMOGLOBE_SHARED_DIRECTIVE.md  MEMOGLOBE_SYNC.md  MEMORY.md  PROMETHEUS_SYNC.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  schemas.py  store.py
backend/app/routers/: __init__.py  analysis.py  globe.py  journey.py  metacog.py  notes.py  quests.py  scaffolding.py
docs/: ag_design_system.md  codex_handoff_ui_mobile_theme_api_status_2026-02-15.md  joint_phase1_contract_checklist.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/mocks/: browser.ts  data.ts  handlers.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GlobeViewer.tsx  MswProvider.tsx
frontend/src/lib/api/: memoglobe-client.ts
runtime/agent-store/projections/: ag_learning_sprint_2.md
shared/: constants.py  constants.ts  openapi.yaml
shared/i18n/: en.json  ko.json
