[project]
name = "memoglobe-backend"
version = "0.1.0"
description = "MemoGlobe FastAPI backend scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
